@@ -1,3 +1,4 @@
+2022-05-23: Add checks for fragments part in case of corrupt data
 2022-05-17: Fix potential integer overflow with corrupt data
 2022-05-05: Fix: index entry label not being zero-terminated with corrupt input
 2022-05-03: Fix boundary checking error in markup search, that could cause buffer over-read with corrupt input
